# 2048

./: CMakeLists.txt  README.md  package.xml
include/game_2048/: config.hpp  game_manager.hpp  window.hpp
launch/: game_2048.launch
src/: game_manager.cpp  main.cpp  window.cpp
